# kinetics-simulation

./: .gitignore  README.md  pyproject.toml
data/: oregonator_initial_conditions.txt  oregonator_reactions.txt  protein_initial_conditions.txt  protein_reactions.txt
docs/: spatial_extension_design.md
scripts/: run_oregonator.py  run_protein_folding.py
src/kinetics/: __init__.py  io_utils.py  model.py  tasks.py
tests/: test_kinetics.py
